tests/integration/snapshots/integration__install__run_install_test-2.snap
---
source: tests/integration/install.rs
expression: result
---
Packages:
  Minimal.luau: "return require(\"./_Index/biff_minimal-shared@0.1.0/minimal-shared\")\n"
  _Index:
    biff_minimal-shared@0.1.0:
      minimal-shared:
        default.project.json: "{\n  \"name\": \"minimal-shared\",\n  \"tree\": {\n    \"$path\": \"src\"\n  }\n}"
        src:
          init.lua: "return \"hey\""
        wally.toml: "[package]\nname = \"biff/minimal-shared\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"shared\"\nregistry = \"test-registries/primary-registry\"\n"
ServerPackages:
  _Index:
    biff_minimal-shared@0.1.0:
      minimal-shared:
        default.project.json: "{\n  \"name\": \"minimal-shared\",\n  \"tree\": {\n    \"$path\": \"src\"\n  }\n}"
        src:
          init.lua: "return \"hey\""
        wally.toml: "[package]\nname = \"biff/minimal-shared\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"shared\"\nregistry = \"test-registries/primary-registry\"\n"
    biff_server-depends-on-shared@0.1.0:
      Minimal.luau: "return require(\"../biff_minimal-shared@0.1.0/minimal-shared\")\n"
      server-depends-on-shared:
        default.project.json: "{\n  \"name\": \"server-depends-on-shared\",\n  \"tree\": {\n    \"$path\": \"src\"\n  }\n}"
        src:
          init.lua: "local Minimal = require(script.Parent.Minimal)\n\nreturn function()\n\tprint(Minimal)\nend"
        wally.toml: "[package]\nname = \"biff/server-depends-on-shared\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[dependencies]\nMinimal = \"biff/minimal-shared@0.1.0\"\n"
  sdos.luau: "return require(\"./_Index/biff_server-depends-on-shared@0.1.0/server-depends-on-shared\")\n"
default.project.json: "{\n\t\"name\": \"cross-realm-explicit-dependency\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
src:
  init.luau: "local Minimal = require(script.Parent.Minimal)\nlocal sdos = require(script.Parent.sdos)\n\nreturn function()\n\tprint(Minimal)\n\tsdos()\nend"
wally.lock: "# This file is automatically @generated by Wally.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/cross-realm-explicit-dependency\"\nversion = \"0.1.0\"\ndependencies = [\n\t[\"Minimal\", \"biff/minimal-shared@0.1.0\"],\n\t[\"sdos\", \"biff/server-depends-on-shared@0.1.0\"],\n]\n\n[[package]]\nname = \"biff/minimal-shared\"\nversion = \"0.1.0\"\ndependencies = []\n\n[[package]]\nname = \"biff/server-depends-on-shared\"\nversion = \"0.1.0\"\ndependencies = [\n\t[\"Minimal\", \"biff/minimal-shared@0.1.0\"],\n]\n\n"
wally.toml: "[package]\nname = \"biff/cross-realm-explicit-dependency\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"shared\"\nregistry = \"test-registries/primary-registry\"\n\n[place]\nshared-packages = \"game.ReplicatedStorage.Packages\"\n\n[dependencies]\nMinimal = \"biff/minimal-shared@0.1.0\"\n\n[server-dependencies]\nsdos = \"biff/server-depends-on-shared@0.1.0\"\n"
