tests/integration/snapshots/integration__install__run_install_test-6.snap
---
source: tests/integration/install.rs
expression: result
---
default.project.json: "{\n\t\"name\": \"minimal\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
src:
  init.luau: "return \"hey\""
wally.lock: "# This file is automatically @generated by Wally.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n\n"
wally.toml: "[package]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n"
